name:                quicksort
version:             0.1.0.0
license-file:        LICENSE
author:              Miles Frankel and Frank Hucek
maintainer:          miles.frankel@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable quicksort
  main-is:             Sort.hs
  -- other-modules:
  -- other-extensions:
  ghc-options:         -O2 -Wall
  build-depends:       base >=4.6 && <4.9
                     , vector
                     , transformers
                     , random
  -- hs-source-dirs:
  default-language:    Haskell2010
